--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.14"
   },
   "dependencies": {
     "@react-three/cannon": "^4.0.1",
-    "@react-three/drei": "^7.16.2",
+    "@react-three/drei": "^7.17.1",
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.7",
+    "mongoose": "^6.0.12",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.3",
     "react-router-dom": "^5.3.0",
     "react-three-fiber": "^6.0.13",
+    "socket.io": "^4.3.1",
     "three": "^0.133.1"
   }
 }
