--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.3.0",
     "react-three-fiber": "^6.0.13",
     "socket.io": "^4.3.1",
+    "socket.io-client": "^4.3.2",
     "three": "^0.133.1"
   }
 }
